--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,17 +1,28 @@
 body{
-	background: #ABD1D9 ("\erincarlson.github.io\css\images\erincarlson.jpg");
-	margin-left: 20%;
-	margin-top: 10%;
-	margin-right: 20%;
+	background-color: #DDE7ED;
+	margin-left: 3%;
+	margin-top: 3%;
 	margin-bottom: 10%;
+	font-family: Palatino Linotype;
 }
 
 h1{
 	font-family: fantasy;
-	text-decoration-color: 68D1E8;
 }
 
 h2 {
-	font-family: fantasy;
-	text-decoration-color: 68D1E8;
+	font-family: Palatino Linotype;
+}
+
+
+
+h4 {
+	font-family: Palatino Linotype;
+}
+
+img{
+	float: right;
+	margin-left: 3%;
+	margin-right: 0;
+	margin-top: 0;
 }
