--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,19 +5,11 @@ body{
 	margin-top: 3%;
 	margin-bottom: 10%;
 	font-family: Palatino Linotype;
-=======
-	background-color: D7D9E0;
-	margin-left: 10%;
-	margin-top: 10%;
-	margin-right: 10%;
-	margin-bottom: 10%;
 
->>>>>>> Stashed changes
 }
 
 h1{
-	font-family: fantasy;
-<<<<<<< Updated upstream
+	font-family: cursive;
 }
 
 h2 {
