--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -20,10 +20,27 @@ h4 {
 	font-family: Palatino Linotype;
 }
 
-img{
+/*img{
 	float: right;
 	margin-left: 3%;
 	margin-right: 0;
 	margin-top: 0;
 	text-decoration-color: 68D1E8;
+}
+
+GROW*/
+.grow img {
+  height: 300px;
+  width: 300px;
+ 
+  -webkit-transition: all 1s ease;
+     -moz-transition: all 1s ease;
+       -o-transition: all 1s ease;
+      -ms-transition: all 1s ease;
+          transition: all 1s ease;
+}
+ 
+.grow img:hover {
+  width: 400px;
+  height: 400px;
 }
