--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -26,8 +26,9 @@ img{
 	margin-right: 0;
 	margin-top: 0;
 	text-decoration-color: 68D1E8;
+	opacity: .4;
 }
 
 img:hover{
-	opacity: .4;
+	opacity: 1.0;
 }
