--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,5 @@
 body{
-	background-color: #DDE7ED;
+	background-color: #FFFACD;
 	margin-left: 3%;
 	margin-top: 3%;
 	margin-bottom: 10%;
@@ -21,14 +21,35 @@ h4 {
 	font-family: Palatino Linotype;
 }
 
-img{
-	opacity: 1.0;
-	float: right;
-	margin-left: 3%;
-	margin-right: 0;
-	margin-top: 0;
+#name{
+	font-family:Bookman;
+	font-size:35px;
 }
 
-img:hover{
-	opacity: .4;
+#erinPic{
+	width:500px;
+	height:930px;
+	float:right;
+	background-image:url("erincarlson_cropped.JPG");
+	margin-left:3%;
+	border-radius:25px;
+	} 
+
+#bioText{
+	width:460px;
+	height:930px;
+	float:right;
+	background:#FFF;
+	opacity:0;
+	} 
+
+#erinPic:hover #bioText {
+	opacity:0.7;
+	text-align: justify;
+	font-size:20px;
+	font-weight:700;
+	font-family: Palatino Linotype;
+	padding-top:50%;
+	padding-right: 20px;
+	padding-left: 20px;
 }
