--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,8 +1,6 @@
 body{
 	background-color: #FFFACD;
-	margin-left: 3%;
-	margin-top: 3%;
-	margin-bottom: 10%;
+	padding-top:2%;
 	font-family: Palatino Linotype;
 	text-decoration-color: 68D1E8;
 
@@ -10,10 +8,15 @@ body{
 
 h1{
 	font-family: Palatino Linotype;
+	padding-top: 1%;
+	font-size:2em;
+	font-weight:bold;
 }
 
 h2 {
 	font-family: Palatino Linotype;
+	padding-top:1%;
+	font-size:1.5em;
 }
 
 
@@ -26,18 +29,42 @@ h4 {
 	font-size:35px;
 }
 
+#jumbotron{
+	
+}
+
+.col-md-4{
+}
+
+.li{
+	padding-left: 3%;
+}
+
+.container{
+	background-color: #FFFACD;
+}
+
+.image{
+	text-align:center;
+}
+
+.text{
+	text-align:center;
+}
+
 #erinPic{
 	width:500px;
-	height:930px;
-	float:right;
+	height:696px;
+	float:left;
 	background-image:url("erincarlson_cropped.JPG");
-	margin-left:3%;
+	margin-right:5%;
+	margin-top: 2%;
 	border-radius:25px;
 	} 
 
 #bioText{
-	width:460px;
-	height:930px;
+	width:500px;
+	height:696px;
 	float:right;
 	background:#FFF;
 	opacity:0;
