--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -19,6 +19,11 @@ h2 {
 	font-size:1.5em;
 }
 
+h3{
+	font-family: Palatino Linotype;
+	padding-top:1%;
+	font-size:1.2em;
+}
 
 h4 {
 	font-family: Palatino Linotype;
@@ -30,6 +35,7 @@ p {
 
 li {
 	font-size: 1.1em;
+	padding-left: 2%;
 }
 
 #mainpic{
