--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -73,7 +73,7 @@ button{
 }
 
 .jumbotron{
-	background-color: #020824;
+	background-color: #19E0BF;
 	padding-top:2%;
 	padding-bottom:2%;
 	color:#ffffff;
@@ -88,7 +88,6 @@ button{
 	padding-left:10%;
 	text-align: center;
 	font-size: 1.2em;
-	color:#E9E581;
 }
 
 .col-md-4{
