--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -74,10 +74,11 @@ button{
 }
 
 .jumbotron{
-	background-color: #CC2F49;
+	background-color: #19E0BF;
 	padding-top:2%;
 	padding-bottom:2%;
 	text-decoration: #EBE6E7;
+
 }
 
 #name{
@@ -89,6 +90,7 @@ button{
 	padding-left:20%;
 	text-align: center;
 	font-size: 1em;
+	color: #EBE6E7;
 }
 
 .col-md-4{
