--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -74,22 +74,23 @@ button{
 }
 
 .jumbotron{
-	background-color: #19E0BF;
-	padding-top:2%;
-	padding-bottom:2%;
-	text-decoration: #EBE6E7;
-
+	background-image: url(../cherryblossoms.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	min-height: 500px;
+	max-width: 100%;
+	padding-top: 0%;
 }
 
-#name{
 
+#navbar{
+	margin-bottom: 0;
 }
 
 #bio{
 	padding-right: 20%;
 	padding-left:20%;
-	text-align: center;
-	font-size: 1em;
+	font-size: .8em;
 }
 
 .col-md-4{
@@ -115,6 +116,13 @@ button{
 
 }
 
+.techAss{
+	color: black;
+	padding-top: 3%;
+	padding-bottom: 3%;
+	font-size: 2em;
+}
+
 .techAssociate{
 	float:left;
 }
@@ -125,24 +133,4 @@ button{
 
 .text{
 	text-align:center;
-}
-
-/*#bioText{
-	width:500px;
-	height:696px;
-	float:right;
-	background:#FFF;
-	opacity:0;
-	border-radius:25px;
-	} 
-
-#erinPic:hover #bioText {
-	opacity:0.7;
-	text-align: justify;
-	font-size:20px;
-	font-weight:700;
-	font-family: Palatino Linotype;
-	padding-top:60%;
-	padding-right: 20px;
-	padding-left: 20px;
 }
