--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -116,8 +116,7 @@ li {
 
 .navbar.navbar-transparent{
 	margin-bottom: 0;
-	background-image: none;
-	background: transparent;
+	opacity: 0.7;
 }
 
 .techAssociate{
