--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -117,7 +117,7 @@ li {
 .navbar.navbar-transparent{
 	margin-bottom: 0;
 	opacity: 0.7;
-	background: black;
+	background: gray;
 }
 
 .techAssociate{
