--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -116,9 +116,11 @@ li {
 
 .navbar.navbar-transparent{
 	margin-bottom: 0;
-	background-color: #3D423A;
+	background-color: transparent;
+	background: transparent;
+	border-color: transparent;
 	opacity: 0.6;
-	filter: alpha(opacity:60);
+	filter: alpha(opacity=60);
 }
 
 .techAssociate{
