--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -118,7 +118,7 @@ li {
 	margin-bottom: 0;
 	opacity: 0.6;
 	position: fixed;
-	background-color: white;
+	background: white;
 }
 
 .techAssociate{
