--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -137,10 +137,15 @@ li {
 	position: fixed;
 }
 
+.oldWork{
+	padding-top: 1%;
+	padding-right: 3%;
+	text-align: center;
 
 .techAssociate{
 	padding-top: 1%;
 	padding-right: 3%;
+	text-align: center;
 
 }
 
