--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -139,12 +139,11 @@ li {
 
 .oldWork{
 	padding-top: 1%;
-	padding-right: 3%;
 	text-align: center;
 	background-color: black;
 	color: white;
 	vertical-align: middle;
-	padding-bottom: 3%
+	margin-bottom: 3%
 
 .school{
 	padding-top: 1%;
