--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -31,6 +31,10 @@ h4 {
 	text-align: center;
 }
 
+h5 {
+	text-align: center;
+}
+
 p {
 	font-size: 1.1em;
 }
@@ -125,8 +129,6 @@ li {
 	opacity: 1;
 	background: white;
 }
-
-
 
 .navbar.navbar-default{
 	width: 100%;
