--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -33,6 +33,7 @@ h4 {
 
 h5 {
 	text-align: center;
+	font-size: .8em;
 }
 
 p {
@@ -160,7 +161,7 @@ li {
 
 .schoolText{
 	text-align:center;
-	padding-top: 2%;
+	padding-top: 3%;
 }
 
 .techAss{
