--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -33,7 +33,7 @@ h4 {
 
 h5 {
 	text-align: center;
-	font-size: 1em;
+	font-size: 1.2em;
 }
 
 p {
@@ -80,6 +80,7 @@ li {
 
 .imgcenter{
 	text-align: center;
+	padding-bottom: 1%;
 }
 
 .jumbotron{
