--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -125,6 +125,19 @@ li {
 	min-width: 100%;
 }
 
+.media{
+	padding-bottom: 5%;
+}
+
+.media-body{
+	padding-left: 5%;
+}
+
+.media-heading{
+	text-align: left;
+	font-size: 2em;
+}
+
 .navbar{
 	width: 100%;
 	border-radius: 0px;
