--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,11 +1,11 @@
 body{
 	background-color: #f2f2f2;
-	font-family: Open Sans;
+	font-family: sans-serif;
 
 }
 
 h1{
-	font-family: Open Sans;
+	font-family: sans-serif;
 	padding-top: 1%;
 	padding-bottom: 1%;
 	font-size:1.5em;
@@ -14,20 +14,20 @@ h1{
 }
 
 h2 {
-	font-family: Open Sans;
+	font-family: sans-serif;
 	padding-top:1%;
 	font-size:2em;
 	padding-bottom:3%;
 }
 
 h3{
-	font-family: Open Sans;
+	font-family: sans-serif;
 	padding-top:1%;
 	font-size:1.2em;
 }
 
 h4 {
-	font-family: Open Sans;
+	font-family: sans-serif;
 	text-align: center;
 }
 
