--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,93 +1,113 @@
-html {
-  scroll-behavior: smooth;
-}
-
 body{
 	background-color: #f2f2f2;
-	font-family: "Montserrat", sans-serif;
-	padding-top: 40px;
+	font-family: sans-serif;
 
 }
 
 h1{
-	font-family: "Montserrat", sans-serif;
-	padding-top: 5%;
-	padding-bottom: 3%;
-	font-size: 2.5em;
+	font-family: sans-serif;
+	padding-top: 1%;
+	padding-bottom: 1%;
+	font-size:1.5em;
 	font-weight:bold;
+	text-align: center;
 }
 
 h2 {
-	font-family: "Montserrat", sans-serif;
-	padding-top: 1%;
-	padding-bottom: 3%;
+	font-family: sans-serif;
+	padding-top:1%;
+	font-size:2em;
+	padding-bottom:3%;
 }
 
 h3{
-	font-family: "Montserrat", sans-serif;
-	font-size:2.5em;
-	padding-top: 1%;
-	padding-bottom: 3%;
-	font-weight: bold;
+	font-family: sans-serif;
+	padding-top:1%;
+	font-size:1em;
 }
 
 h4 {
-	font-family: "Montserrat", sans-serif;
-	text-align: left;
-	padding-bottom: 2%;
-	font-weight: bold;
+	font-family: sans-serif;
+	text-align: center;
 }
 
 h5 {
-	text-align: left;
+	text-align: center;
 	font-size: 1em;
-	font-family: "Montserrat", sans-serif;
-
 }
 
-
 p {
-	font-size: 1.3em;
-	line-height: 1.3em;
-	font-family: "Montserrat", sans-serif;
-
+	font-size: 1.0em;
 }
 
 li {
-	font-size: 1.3em;
-	font-family: "Montserrat", sans-serif;
-
+	font-size: 1.1em;
+	padding-left: 2%;
 }
 
-section {
-  padding-top: 4%;
-  padding-bottom: 3%;
-}
-
-section h2 {
-	font-size: 2.5em;
-}
-
-a {
-  color:#40E0D0;
+.balch {
+	padding-bottom: 3%;
+	display: block;
 }
 
 
-/* High Level */
+
+.btn btn-info{
+	height: 3em;
+	width: 5em;
+	font-size: 1.1em;
+	background-color:#E9E581;
+	color:#020824;
+	font-family: Open Sans;
+	padding-left: 3%;
+	padding-top: 2%;
+	padding-bottom: 2%;
+}
+
+.menuBar{
+	background-color:#020824;
+	padding: 1%;
+}
+
+
+#mainpic{
+	padding-bottom: 1%;
+	padding-right: 2%;
+	padding-top: 5%;
+	border-radius: 5em;
+}
+
+
+.imgcenter{
+	text-align: center;
+	padding-bottom: 1%;
+}
+
+.jumbotron{
+	background-image: url(../cherryblossoms.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	min-height: 500px;
+	max-width: 100%;
+	padding-top: 5%;
+}
+
+
+.img{
+	float:center;
+}
+
+#bio{
+	padding-right: 20%;
+	padding-left:20%;
+	font-size: .8em;
+}
 
 .col-md-4{
 	padding-top:2%;
 }
 
-.col-md-5{
-	padding-top:2%;
-}
-
 .col-md-6{
-	padding-top:2%;
-}
-
-.col-md-7{
 	padding-top:2%;
 }
 
@@ -98,7 +118,11 @@ a {
 .container{
 	padding-bottom: 3%;
 	padding-top: 3%;
-	width: 100%;
+}
+
+
+.blossoms{
+	min-width: 100%;
 }
 
 .media{
@@ -114,304 +138,64 @@ a {
 	font-size: 2em;
 }
 
-
-/* Navigation */
-
 .navbar{
-	padding-top: 0;
-	position: fixed;
-	max-height: 7%;
 	width: 100%;
-	border-radius: 0;
-
+	border-radius: 0px;
+	opacity: 1;
+	background: white;
 }
 
-.navbar h2{
-	padding:none;
+.navbar.navbar-default{
+	width: 100%;
+	border-radius: 0px;
+	opacity: 1;
+	background: white;
 }
 
-.nav-link{
-	margin-right: 1.5em;
-	margin-bottom: 1%;
-
-
+.navbar.navbar-transparent{
+	width: 100%;
+	border-radius: 0px;
+	opacity: .8;
+	background: white;
+	position: fixed;
 }
 
-.nav-link:active , .nav-link:hover , .nav-link:focus { 
-    background-color: transparent;
-    border-color: transparent;
-    font-weight: bold;
-    border-bottom: 3px solid #40E0D0;
-
-}
-
-
-.navbar-toggler{  
-	background:transparent;
-
-}
-
-
-.nav-link , .navbar-brand{ 
-	cursor: pointer;
-}
-
-.navbar-brand h2 {
-	color:#40E0D0;
-	padding-top: 7%;
-}
-
-#navbarResponsive{
-	float: right;
-}
-
-.navbar-collapse{
- 	justify-content: flex-end;
-	padding-top: 0;
-	margin-top: 0;
-}
-
-.navbar a.hover{
-	color:#40E0D0;
-}
-
-
-@media screen and (max-width: 600px) {
-  #main-navigation a {
-    float: none;
-    display: block;
-
-  }
-}
-
-/*
-
-#main-navigation {
-	max-height: 7%;
-	border-radius: 0;
-	border-bottom: none;
-}
-
-.nav-link.active, .nav-link:focus, .nav-link:hover {
-    background-color: transparent;
-    border-color: transparent;
-    text-decoration: bold;
-    border-bottom: 3px solid #40E0D0;
-}
-
-#porfolio-tab .nav-item a{
-     color: black;
-     text-decoration:none;
-}
-
-#porfolio-tab .nav-item a:hover a:focus {
-    color: black;
-}
-
-*/
-
-
-
-
-
-
-
-
-
-/* Lead Container */
-
-.lead-container{
-	width:100%;
-	position: relative;
-  	margin: 0 auto;
-  	padding-bottom: 0;
-
-}
-
-.lead-text h1{
-	position: absolute;
-  	top: 0; 
-  	width: 100%;
-  	padding-top: 5%;
-  	padding-left: 10%;
-  	color: black;
-  	text-align: left;
-}
-
-.header{
- 	background-image: url('../images/erin-carlson-leading-image.JPG');
- 	background-attachment: fixed;
- 	background-size: cover;
- 	background-position: center;
-}
- 
-
-
-/* Button */
-
-.btn btn-info{
-	height: 3em;
-	width: 5em;
-	font-size: 1.1em;
-	background-color:#E9E581;
-	color:#020824;
-	font-family: Open Sans;
-	padding-left: 3%;
+.oldWork{
 	padding-top: 1%;
-	padding-bottom: 2%;
-}
-
-/* Skills */
-
-.call-out{
-	line-height: 10pt;
-}
-
-.call-out a{
-	text-decoration-color: white;
-}
-
-.kpis{
-	background-color: #40E0D0;
-	margin-right: -15px;
-	margin-left: -30px;
-	padding-bottom: 3%;
-	text-align: center;
-}
+	text-align: left;
+	vertical-align: middle;
+	margin-bottom: 3%
 
 
-.kpis a {
-	color: white;
-	font-size: 1.5em;
-}
-
-
-
-/* Portfolio */
-
-
-#portfolio .row {
+.row{
 	padding-bottom:3%;
 }
 
-#portfolio h3 {
-	background-color: #40E0D0;
-	margin-left: -90px;
-	margin-right: -85px;
-	padding-left: 90px;
-	padding-top:3%;
+.school{
+	padding-top: 1%;
+	padding-right: 3%;
 }
 
-#portfolio h4 {
-	color: #39CCCC;
-	font-weight: bold;
-	font-size: 1.5em;
-}
-
-#portfolio a {
-	color: #39CCCC;
-	font-weight:bold;
-}
-
-
-
-
-
-/* Resume */
-
-
-
-#aws{
-	min-height: 800px;
-	margin-right: -30px;
-	margin-left: -30px;
-	padding-top: 2%;
-	padding-left: 30px;
-	padding-right: 30px;
-	margin-bottom: 5%;
-}
-
-#aws-title{
-	background-color: #40E0D0;
-	margin-right: -30px;
-	margin-left: -30px;
-	padding-left: 45px;
-	padding-right: 30px;
-	padding-top: 2%;
-}
-
-
-#aws-pic{
-	padding-bottom: 2%;
-	padding-right: 2%;
-	padding-top: 2%;
-}
-
-#resume a {
-	color: #39CCCC;
-}
-
-#resume h4{
-	font-weight: bold;
-}
-
-#mstr-title{
-	background-color: #40E0D0;
-	margin-right: -45px;
-	margin-left: -45px;
-	padding-left: 45px;
-	padding-right: 30px;
-	padding-top: 2%;
-}
-
-#mainpic{
-	padding-bottom: 3%;
-	padding-right: 2%;
-	padding-top: 5%;
-}
-
-#additional-work{
-	min-height: 300px;
-	background-color: #40E0D0;
-	width:100%;
-
-}
-
-#additional-work h4{
-	font-weight:bold;
-	padding-bottom:2%;
-}
-
-/* Education */
-
-
-.imgcenter{
-	text-align: left;
-	padding-bottom: 2%;
-}
-
-#education{
-	margin-bottom: 3%;
-	padding-bottom: 5%;
-}
-
-
-
-
-/* Footer */
-
-footer {
-	background-color: black;
-	margin-top: 3%;
-	padding-top: 2%;
-	padding-bottom: 3%;
-	padding-left: 5%;
-}
-
-footer p {
+.schoolText{
 	text-align:center;
-	color:#39CCCC;
-	font-weight:bold;
+	padding-top: 3%;
 }
 
+.techAss{
+	color: black;
+	padding-top: 3%;
+	padding-bottom: 3%;
+	font-size: 2em;
+}
 
+.techAssociate{
+	float:left;
+}
+
+.techAssociate2{
+	margin-left: 2%;
+}
+
+.text{
+	text-align:center;
+}
