--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -34,6 +34,7 @@ h3{
 h4 {
 	font-family: "Montserrat", sans-serif;
 	text-align: left;
+	padding-top: 3%;
 	padding-bottom: 2%;
 	font-weight: bold;
 }
@@ -48,7 +49,7 @@ h5 {
 
 p {
 	font-size: 1.3em;
-	line-height: 1.3em;
+	line-height: 1.5em;
 	font-family: "Montserrat", sans-serif;
 
 }
